Images folder renamed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	
 	</section>
 	<hr>
-	<p><!-- social links Setup ============================================= --></p>
+	<!-- social links Setup ============================================= -->
 	<section id="social-setup">
 	
 	<h3>III. Social widget area setup</h3>
