--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 	<ol>
 		<li>Go To Apperance &gt; Menu</li>
 		<li>Create a new menu by clicking on create a new menu</li>
-		<img src="Images/social1.PNG" width="80%" alt="Social Icons">
+		<img src="/HireMe-theme-doc/Images/social1.PNG" width="80%" alt="Social Icons">
 		<li>Add your menu items as <strong>Custom links</strong> in left side menu</li>
-		<img src="Images/social2.PNG" width="80%" alt="Social Icons">
+		<img src="/HireMe-theme-doc/Images/social2.PNG" width="80%" alt="Social Icons">
 	</ol>
 	
 	<h4>Step2: Put links on the widget area</h4>
 	<ol>
 		<li>Next, Go To Widgets &gt; select "navigation menu" &gt; select "social media widget area" &gt; click "add widget"</li>
-		<img src="Images/social3.PNG" width="80%" alt="Social Icons">
+		<img src="/HireMe-theme-doc/Images/social3.PNG" width="80%" alt="Social Icons">
 	</ol>
 	
 	</section>
@@ -89,10 +89,10 @@
 	<h4>Step1: Home page</h4>
 	<ol>
 		<li>Go to Dashboard &gt; Pages &gt; Add new</li>
-		<img src="Images/front1.PNG" width="80%" alt="Corporate Image">
+		<img src="/HireMe-theme-doc/Images/front1.PNG" width="80%" alt="Corporate Image">
 		<li>Create Home Page</li>
 		<li>choos a thumbnail</li>
-		<img src="Images/front2.PNG" width="80%" alt="Corporate Image">
+		<img src="/HireMe-theme-doc/Images/front2.PNG" width="80%" alt="Corporate Image">
 	</ol>
 	
 	<h4>Step2: Blog page</h4>
@@ -104,7 +104,7 @@
 	<h4>Step3: Setup reading</h4>
 	<ol>
 		<li>Go to Settings &gt; Reading and select Front page displays &gt; A static page (select “Home”) &amp; Posts page ( “Blog”)</li>
-		<img src="Images/homepage_setting.png" alt="Home Page Setting">
+		<img src="/HireMe-theme-doc/Images/homepage_setting.png" alt="Home Page Setting">
 	</ol>
 	
 	
@@ -118,16 +118,16 @@
 	<h4>Step1: Create the page with "work template" </h4>
 	<ol>
 		<li>Go to Dashboard &gt; Pages &gt; Add new</li>
-		<img src="Images/front1.PNG" width="80%" alt="Corporate Image">
+		<img src="/HireMe-theme-doc/Images/front1.PNG" width="80%" alt="Corporate Image">
 		<li>Create Home Page</li>
 		<li>Go to Settings &gt; page attributes &gt; template &gt; select work template</li>
-		<img src="Images/work1.PNG" width="80%" alt="Corporate Image">
+		<img src="/HireMe-theme-doc/Images/work1.PNG" width="80%" alt="Corporate Image">
 	</ol>
 	
 	<h4>Step2: Add work Categories to the page </h4>
 	<ol>
 		<li>Next, Go To appearance &gt; go to Widgets &gt; select "Categories" &gt; select "categories widget area" &gt; click "add widget"</li>
-		<img src="Images/work2.PNG" width="80%" alt="Social Icons">
+		<img src="/HireMe-theme-doc/Images/work2.PNG" width="80%" alt="Social Icons">
 	</ol>
 	</section>
 	<hr>
